--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "path": "^0.12.7"
+  },
+  "engines": {
+    "node": "6.6.0"
   }
 }
